--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-:root {
+
+/* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -69,3 +70,4 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+ */
