--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
-/* :root {
+:root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -70,4 +68,3 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
- */
